--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <style>
 .marginBottom-0 {margin-bottom:0;}
-.dropdown:hover .dropdown-menu {display: block; background-color: #555;color: aqua;}
+.dropdown:hover .dropdown-menu {display: block; background-color: #fff;color: aqua;}
 .dropdown-submenu{position:relative;}
 .dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
 .dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
@@ -24,6 +24,7 @@
     display: inline-block;
     margin-left: 2px;
     vertical-align: middle;
+    
 }
 </style>
 
@@ -84,7 +85,7 @@ $(function(){
 						<li><a href="createPosition.html" >View</a></li>
 					</ul></li>
 					<li class="dropdown"><a href="#" class="dropdown-toggle" 
-					data-toggle="dropdown">Skill Set <b class="caret"></b></a>
+					data-toggle="dropdown">Schedule Appointment <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="#" target="_blank">Create New</a></li>
 						<li><a href="#" target="_blank">Edit</a></li>
