--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -68,10 +68,10 @@ document.getElementById('login-form').submit();
 </head>
 <body class="login-body" >
 	<!-- Header -->
-<div class="page-header">
+<div class="pageDiv">
 		<div class=headerDiv>
 <div class="logoDiv"></div>
-<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
+<div class="rightDiv"><br><h1 align="center">Employee Referral Portal</h1></div>
 </div>
 	</div>
 
