--- a/src/main/webapp/createUser.html
+++ b/src/main/webapp/createUser.html
@@ -19,17 +19,14 @@
 		<div class="pageDiv">
 			<div class=headerDiv>
 				<div class="logoDiv"></div>
-				<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
 			</div>
 			<div class="container">
 			<div ng-include="'menu.html'" class="menuBarStyle" align="center"></div>
-				
-					<br>
-					<h2 class ="heading-class">User Registration form</h2>
-					<br>
+			<div class="form-container">
+					<h2 class ="heading-class">User Registration form</h2><br>
 					<form name="userForm" id="integerForm" role="form"
 						class="form-horizontal">
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userId.$invalid && !userForm.userId.$pristine &&! userForm.userId.$required}">
 							<label for="userId">User Id*:</label> <input type="email"
 								name="userId" class="form-control" id="userId" ng-change="changeEvent()" 
@@ -39,10 +36,10 @@
 								class="help-block">A Valid Email Id Should Be Entered</span> <span
 								ng-show="userForm.userId.$required" class="help-block">Email
 								Id Is Required</span>
-						</div>
+						</div><br>
 
 
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userName.$invalid && !userForm.userName.$pristine }">
 							<label for="userName">Name*:</label> <input type="text" ng-change="changeEvent()"
 								name="userName" class="form-control" id="userName"
@@ -52,11 +49,9 @@
 								class="help-block"> Enter A Valid Name</span> <span
 								class="help-block" ng-show="userForm.userName.$error.number">Name
 								Is Required !!</span>
-						</div>
+						</div><br>
 
-
-
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.emplyoeeId.$invalid && !userForm.emplyoeeId.$pristine }">
 							<label for="emplyoeeId">Employee Id*:</label> <input
 								type="number" name="emplyoeeId" class="form-control" ng-change="changeEvent()" 
@@ -69,10 +64,9 @@
 								is invalid!!</span> <span class="help-block"
 								ng-show="userForm.emplyoeeId.$error.$error.maxlength">Employee
 								Id is too long</span>
-						</div>
+						</div><br>
 
-
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.experience.$invalid && !userForm.experience.$pristine }">
 							<label for="experience">Experience*:</label> <input type="number" ng-change="changeEvent()" 
 								name="experience" class="form-control" id="experience"
@@ -82,9 +76,9 @@
 								Of Experience Is Required</span> <span class="help-block"
 								ng-show="userForm.experience.$error.$number">Entry is
 								invalid!!</span>
-						</div>
+						</div><br>
 
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.mobileNo.$invalid && !userForm.mobileNo.$pristine }">
 							<label for="mobileNo">Mobile No* :</label> <input type="number" ng-change="changeEvent()" 
 								ng-model="user.mobileNumber" name="mobileNo" id="mobileNo"
@@ -97,10 +91,9 @@
 								is invalid!!</span> <span class="help-block"
 								ng-show="userForm.mobileNo.$error.maxlength">Mobile
 								Number is too long</span>
-						</div>
+						</div><br>
 
-
-						<div class="form-group"
+						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userDesignation.$invalid && !userForm.userDesignation.$pristine }">
 							<label for="userDesignation">Designation*:</label> <input
 								type="text" name="userDesignation" class="form-control" ng-change="changeEvent()" 
@@ -108,9 +101,9 @@
 								placeholder="Enter Designation" required> <span
 								ng-show=" userForm.userDesignation.$invalid && !userForm.userDesignation.$pristine"
 								class="help-block">Designation is required.</span>
-						</div>
+						</div><br>
 
-						<div class="form-group">
+						<div class="control-group">
 							<label for="name">Role*:</label> <select class="form-control" ng-change="changeEvent()" 
 								ng-model="user.roles" name="roles">
 								<option selected="select">USER</option>
@@ -119,15 +112,14 @@
 							</select>
 						</div>
 						<br> 
-						<div class="form-group">
+						<div class="control-group">
 						<input type="submit" class="btn btn-info"
 							ng-click="submit()" value=Register name="post" align="center" ng-disabled="enableDisbleButton" />
 							</div>
-							<loading></loading>
-			</div>
-			
-			</form>
-		</div>
-
-</body>
+							<br>
+						</div>
+					</form>
+					</div>
+				</div>
+			</body>
 </html>
