--- a/src/main/webapp/searchUser.html
+++ b/src/main/webapp/searchUser.html
@@ -24,10 +24,10 @@
 			<div class="pageDiv">
 				<div class=headerDiv>
 					<div class="logoDiv"></div>
-					<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
 				</div>
 				<div class="container">
-					<div ng-include="'menu.html'" class="menuBarStyle"></div><br>
+					<div ng-include="'menu.html'" class="menuBarStyle"></div>
+					<div class="form-container">
 					<h2 class ="heading-class">Search for Existing User</h2><br>
 					<div class="control-group">
 						<label for="name">First Name:</label> <input type="text"
@@ -38,14 +38,12 @@
 					<div class="control-group">
 					<input type="button" class="btn btn-info" ng-click="searchUser()" ng-disabled="enableDisbleButton"
 						value="Search" name="get" align="center" />
-						</div>
-				</div>
-				<br>
-				<div class="gridStyle" ng-grid="gridOptions"></div>
+						</div><br>
+				   <div class="gridStyle" ng-grid="gridOptions"></div>
 			</div>
-			<loading></loading>
+			</div>
+			</div>
 		</form>
 	</div>
-
 </body>
 </html>
