--- a/src/main/webapp/editPosition.html
+++ b/src/main/webapp/editPosition.html
@@ -29,8 +29,8 @@
 					</div>
 					<div class="container">
 					<div ng-include="'menu.html'" class="menuBarStyle"></div>
-					<br>
-						<h2 class ="heading-class">Create New Position</h2>
+					<div class="form-container">
+						<h2 class ="heading-class">Edit Position</h2>
 						<br>
 						<form id="integerForm" role="form" class="form-horizontal">
 							<div class="control-group"
@@ -59,24 +59,28 @@
 						<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.primarySkills.$invalid && !createPosition.primarySkills.$pristine }">
 							<label for="primarySkills">Primary Skills :</label> <input name="primarySkills" class="form-control"
-								id="primarySkills" ng-model="position.primarySkills" ng-disabled="enableDisableButton" required ng-init="enableDisableButton=true" placeholder="Enter Primary Skills" required style="color: black"> <span
+								id="primarySkills" ng-model="position.primarySkills" ng-disabled="enableDisableButton" required ng-init="enableDisableButton=true" placeholder="Enter Primary Skills"
+								ng-pattern="/^[a-zA-Z _]*$/"
+								 required style="color: black"> <span
 								ng-show="createPosition.primarySkills.$invalid  && !createPosition.primarySkills.$pristine"
-								class="help-block" style="font: black">Primary Skills are required.</span>
+								class="help-block" style="font: black">Enter Valid Primary Skills.</span>
 						</div><br>
 
 						<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : createPosition.secondarySkills.$invalid && !createPosition.secondarySkills.$pristine }">
 							<label for="secondarySkills">Secondary Skills :</label> <input
 								id="secondarySkills" name="secondarySkills"
+								ng-pattern="/^[a-zA-Z _]*$/"
 								class="form-control" ng-model="position.secondarySkills" ng-init="enableDisableButton=true"
 								placeholder="Enter Secondary Skills" ng-disabled="enableDisableButton" required ng-init="enableDisableButton=true" required> <span
 								ng-show="createPosition.secondarySkills.$invalid  && !createPosition.secondarySkills.$pristine"
-								class="help-block">Secondary Skills are required.</span>
+								class="help-block">Enter Valid Secondary Skills.</span>
 						</div><br>
 
 						<div class="control-group" ng-class="{'has-error' :createPosition.noOfPositions.$invalid && !createPosition.noOfPositions.$pristine}">
 								<label for="name">No of Positions :</label> <input
 									type="number" name="noOfPositions" class="form-control" ng-init="enableDisableButton=true"
+									ng-pattern="^[0-9]*$" 
 									id="noOfPositions" ng-model="position.noOfPositions" ng-disabled="enableDisableButton" required ng-init="enableDisableButton=true"
 									placeholder="Enter No of Positions" ngPattern="1234567890 " ng-maxlength="10" required> 
 								 <span class="help-block" ng-show="createPosition.noOfPositions.$error.required && !createPosition.noOfPositions.$pristine && !createPosition.noOfPositions.$error.number">Numbers should be entered</span>
@@ -94,17 +98,20 @@
 							
 							<div class="control-group" ng-class="{'has-error' :createPosition.designation.$invalid && !createPosition.designation.$pristine}">
 								<label for="name">Designation :</label> <input type="text" name="designation" ng-init="enableDisableButton=true"
+									ng-pattern="/^[a-zA-Z _]*$/"
 									class="form-control" id="designation" ng-model="position.designation"
 									placeholder="Enter Designation"  ng-disabled="enableDisableButton" required ng-init="enableDisableButton=true" required>
 								<span ng-show="createPosition.designation.$invalid  && !createPosition.designation.$pristine"
-									class="help-block">Designation is required.</span>
+									class="help-block">A Valid Designation is required.</span>
 							</div><br>
 							<div class="control-group">
 							<input type="button" class="btn btn-info" ng-click="editPosition()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px"/>
 							<input type="button" class="btn btn-info" ng-click="updatePositionDetails()" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true" value=Update name="post" align="center" style="color: 0000FF"/>
 							<input type="button" class="btn btn-info" ng-click="cancel()" value=Cancel name="post" align="center" style="color: 0000FF"/>
 							</div>
+							<br>
 					</form>
+					</div>
 					</div>
 					<br />
 				</div>
