--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -26,7 +26,8 @@
 					<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
 				</div>
 				<div class="container">
-					<div ng-include="'menu.html'" class="menuBarStyle"></div><br>
+					<div ng-include="'menu.html'" class="menuBarStyle"></div>
+					<div class="form-container">
 					<h2 class="heading-class">Search for Positions Created based on : </h2><br>
 					<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : searchPosition.designations.$invalid && !searchPosition.designations.$pristine }">
@@ -39,13 +40,15 @@
 					<input type="button" class="btn btn-info" ng-click="searchCandidate()" ng-disabled="enableDisbleButton" 
 						value="Search" name="get" align="center" />
 				</div>
-				</div>
+				
 				<br>
-				<div class="gridStyle control-group" ng-grid="gridOptions"></div>
+				<div  class="gridStyle control-group" ng-grid="gridOptions"></div><br>
 			</div>
+			</div>
+			<br>
 			<loading></loading>
 		</form>
-	</div>
+		</div>
 
 </body>
 </html>
