--- a/src/main/webapp/searchUser.html
+++ b/src/main/webapp/searchUser.html
@@ -39,7 +39,7 @@
 					<input type="button" class="btn btn-info" ng-click="searchUser()" ng-disabled="enableDisbleButton"
 						value="Search" name="get" align="center" />
 						</div><br>
-				   <div class="gridStyle" ng-grid="gridOptions"></div>
+				   <div class="gridStyle" ng-grid="gridOptions"></div><BR>
 			</div>
 			</div>
 			</div>
