--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -19,6 +19,7 @@
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="css/ng-tags-input.min.css">
 </head>
 
 
