--- a/src/main/webapp/footer.html
+++ b/src/main/webapp/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-inner">
     <div class="container">
       <div class="row">
-        <div class="span12"> &copy; 2015 <a href="http://www.egrappler.com/">OSI Tecnologies</a>. </div>
+        <div class="span12"> &copy; 2015 <a href="http://www.nisum.com/">OSI Tecnologies</a>. </div>
         <!-- /span12 --> 
       </div>
       <!-- /row --> 
