--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -24,15 +24,12 @@
             </ul>
           </li>
         </ul>
-        <form class="navbar-search pull-right">
+        <!-- <form class="navbar-search pull-right">
           <input type="text" class="search-query" placeholder="Search">
-        </form>
+        </form> -->
       </div>
-      <!--/.nav-collapse --> 
     </div>
-    <!-- /container --> 
   </div>
-  <!-- /navbar-inner --> 
 </div>
 <!-- /navbar -->
 <div class="subnavbar">
@@ -42,10 +39,8 @@
         <li class="active"><a href="index.html"><i class="icon-dashboard"></i><span>Dashboard</span> </a> </li>
         <li><a href="reports.html"><i class="icon-list-alt"></i><span>Reports</span> </a> </li>
         <li><a href="charts.html"><i class="icon-bar-chart"></i><span>Charts</span> </a> </li>
+        <li><a href="createPosition.html"><i class="icon-bar-chart"></i><span>Position</span></a>
         </ul>
     </div>
-    <!-- /container --> 
   </div>
-  <!-- /subnavbar-inner --> 
 </div>
-<!-- /subnavbar -->
