--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -1,12 +1,14 @@
-<html lang="en" ng-app="">
+<html lang="en" ng-app="erApp" ng-controller="createPositionCtrl">
 <head>
 <meta charset="utf-8">
 <title>Employee Referral Portal</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
+<script src="lib/angular/js/angular.min.js"></script>
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<script type="text/javascript" src="js/createPosition.js"></script>
+<script type="text/javascript" src="static/js/createPosition.js"></script>
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
+<script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="static/css/home.css" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
@@ -14,7 +16,6 @@
 <link href="css/font-awesome.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/pages/dashboard.css" rel="stylesheet">
-<script src="lib/angular/js/angular.min.js"></script>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -111,8 +112,9 @@
 									id="noOfPositions" ng-model="position.noOfPositions" 
 									ng-pattern="^[0-9]*$" 
 									placeholder="Enter No of Positions" ng-maxlength="10" required> 
-								 <span class="help-block" ng-show="createPosition.noOfPositions.$error.required && !createPosition.noOfPositions.$pristine && !createPosition.noOfPositions.$error.number">Numbers should be entered</span>
- 								 <span class="help-block" ng-show="createPosition.noOfPositions.$error.string">Invalid Value</span>  
+								 
+ 								 <span ng-show="createPosition.noOfPositions.$invalid  && !createPosition.noOfPositions.$pristine"
+									class="help-block">Enter Valid Number</span> 
 							</div></td></tr>
 							
 							<tr>
@@ -153,7 +155,7 @@
 							<tr>
 							<td>
 							<div class="control-group" style="margin-left:169%;">
-							<input type="button" class="btn btn-primary" ng-click="submit()" value=Register name="post" align="center" style="color: fff;" ng-disabled="enableDisbleButton" />
+							<input type="button" class="btn btn-primary" ng-click="submit()" value=Register name="post" align="center" style="color: fff;margin-left:-63%;"  />
 							</div>
 							</td></tr>
               	</table>
