Adding createUser Page

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -37,8 +37,8 @@
     <div class="container">
       <ul class="mainnav">
         <li class="active"><a href="index.html"><i class="icon-dashboard"></i><span>Dashboard</span> </a> </li>
-        <li><a href="reports.html"><i class="icon-list-alt"></i><span>Reports</span> </a> </li>
-        <li><a href="charts.html"><i class="icon-bar-chart"></i><span>Charts</span> </a> </li>
+        <li><a href="createUser.html"><i class="icon-list-alt"></i><span>User</span> </a> </li>
+        <li><a href="charts.html"><i class="icon-bar-chart"></i><span>Candidate</span> </a> </li>
         <li><a href="createPosition.html"><i class="icon-bar-chart"></i><span>Position</span></a>
         </ul>
     </div>
