--- a/src/main/webapp/createUser.html
+++ b/src/main/webapp/createUser.html
@@ -38,42 +38,42 @@
        <div class="widget widget-table action-table">
             <div class="form-container"><br>
             
-              <center><h1>Create New User</h1></center><br>
+              <center><h1>Create User</h1></center><br>
 					<form name="userForm" id="integerForm" role="form"
 						class="form-horizontal">
-						<table border="0" cellpadding="4">
-						<tr><td class="td-class">
+						<table border="0">
+						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userId.$invalid && !userForm.userId.$pristine &&! userForm.userId.$required}">
-							<label for="userId" class="lbl">User Id:</label></td><td> <input type="email"
+							<label for="userId" class="lbl2">User Id:</label></td><td> <input type="email"
 								name="userId" class="form-control input-sm" id="userId" ng-change="changeEvent()" 
-								ng-model="user.userId" placeholder="Enter user Id" required>
+								ng-model="user.userId" placeholder="Enter user Id" required></td></tr><tr><td></td><td>
 							<span
 								ng-show="userForm.userId.$invalid && !userForm.userId.$pristine  "
 								class="help-block">A Valid Email Id Should Be Entered</span> <span
 								ng-show="userForm.userId.$required" class="help-block">Email
 								Id Is Required</span>
-						</div><br></td></tr>
+						</div></td></tr>
 						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userName.$invalid && !userForm.userName.$pristine }">
-							<label for="userName" class="lbl">Name:</label></td><td> <input type="text" ng-change="changeEvent()"
+							<label for="userName" class="lbl2">Name:</label></td><td> <input type="text" ng-change="changeEvent()"
 								name="userName" class="form-control input-sm" id="userName"
 								ng-model="user.name" placeholder="Enter name"
-								ng-pattern="/^[a-zA-Z _]*$/" required> <span
+								ng-pattern="/^[a-zA-Z _]*$/" required></td></tr><tr><td></td><td> <span
 								ng-show="userForm.userName.$invalid && !userForm.userName.$pristine && !userForm.userName.$error.userName"
 								class="help-block"> Enter A Valid Name</span> <span
 								class="help-block" ng-show="userForm.userName.$error.number">Name
 								Is Required !!</span>
-						</div><br></td></tr>
+						</div></td></tr>
 						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.emplyoeeId.$invalid && !userForm.emplyoeeId.$pristine }">
-							<label for="emplyoeeId" class="lbl">Employee Id:</label></td><td> <input
+							<label for="emplyoeeId" class="lbl2">Employee Id:</label></td><td> <input
 								type="number" name="emplyoeeId" class="form-control input-sm" ng-change="changeEvent()" 
 								id="emplyoeeId" ng-model="user.empId"
 								ng-pattern="^[0-9]*$" 
-								placeholder="Enter employee Id" required> <span
+								placeholder="Enter employee Id" required></td></tr><tr><td></td><td> <span
 								class="help-block"
 								ng-show="userForm.emplyoeeId.$invalid && !userForm.emplyoeeId.$pristine&& !userForm.emplyoeeId.$error.number">A
 								Valid Employee Id is required.</span> <span class="help-block"
@@ -81,27 +81,27 @@
 								is invalid!!</span> <span class="help-block"
 								ng-show="userForm.emplyoeeId.$error.$error.maxlength">Employee
 								Id is too long</span>
-						</div><br></td></tr>
+						</div></td></tr>
 						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.experience.$invalid && !userForm.experience.$pristine }">
-							<label for="experience" class="lbl">Experience:</label></td><td> <input type="number" ng-change="changeEvent()" 
+							<label for="experience" class="lbl2">Experience:</label></td><td> <input type="number" ng-change="changeEvent()" 
 								name="experience" class="form-control input-sm" id="experience"
 								ng-model="user.experience" placeholder="Enter Experience"
 								ng-pattern="^[0-9]*$" 
-								required> <span class="help-block"
+								required></td></tr><tr><td></td><td> <span class="help-block"
 								ng-show="userForm.experience.$invalid && !userForm.experience.$pristine&& !userForm.experience.$error.number">Years
 								Of Experience Is Required</span> <span class="help-block"
 								ng-show="userForm.experience.$error.$number">Entry is
 								invalid!!</span>
-						</div><br></td></tr>
+						</div></td></tr>
 						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.mobileNo.$invalid && !userForm.mobileNo.$pristine }">
-							<label for="mobileNo" class="lbl">Mobile No:</label></td><td> <input type="number" ng-change="changeEvent()" 
+							<label for="mobileNo" class="lbl2">Mobile No:</label></td><td> <input type="number" ng-change="changeEvent()" 
 								ng-model="user.mobileNumber" name="mobileNo" id="mobileNo"
 								ngPattern="1234567890" ng-maxlength="10" class="form-control input-sm"
-								placeholder="Enter mobile number" required> <span
+								placeholder="Enter mobile number" required></td></tr><tr><td></td><td> <span
 								class="help-block"
 								ng-show="userForm.mobileNo.$required && !userForm.mobileNo.$pristine && !userForm.mobileNo.$error.number">Valid
 								Mobile Number is required.</span> <span class="help-block"
@@ -109,21 +109,21 @@
 								is invalid!!</span> <span class="help-block"
 								ng-show="userForm.mobileNo.$error.maxlength">Mobile
 								Number is too long</span>
-						</div><br></td></tr>
+						</div></td></tr>
 						<tr><td>
 						<div class="control-group"
 							ng-class="{ 'has-error' : userForm.userDesignation.$invalid && !userForm.userDesignation.$pristine }">
-							<label for="userDesignation" class="lbl">Designation:</label></td><td> <input
+							<label for="userDesignation" class="lbl2">Designation:</label></td><td> <input
 								type="text" name="userDesignation" class="form-control input-sm" ng-change="changeEvent()" 
 								id="userDesignation" ng-model="user.designation"
 								ng-pattern="/^[a-zA-Z _]*$/"
-								placeholder="Enter Designation" required> <span
+								placeholder="Enter Designation" required></td></tr><tr><td></td><td> <span
 								ng-show=" userForm.userDesignation.$invalid && !userForm.userDesignation.$pristine"
 								class="help-block">A Valid Designation is required.</span>
 						</div></td></tr>
 						<tr><td>
 						<div class="control-group">
-							<label for="name" class="lbl">Role:</label></td><td> <select class="form-control input-sm" ng-change="changeEvent()" 
+							<label for="name" class="lbl2">Role:</label></td><td> <select class="form-control input-sm" ng-change="changeEvent()" 
 								ng-model="user.roles" name="roles">
 								<option selected="select">USER</option>
 								<option>Admin</option>
@@ -133,7 +133,7 @@
 						<tr><td>
 						<div class="control-group">
 						<input type="submit" class="btn btn-info"
-							ng-click="submit()" value=Register name="post" align="center" ng-disabled="enableDisbleButton" style="margin-left: 100%" />
+							ng-click="submit()" value=Register name="post" align="center" ng-disabled="enableDisbleButton" style="margin-left: 57%" />
 							</div></td></tr>
 							</table>
 						</form>
