--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -6,19 +6,19 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
-<script src="js/jquery-1.7.2.min.js"></script>
+<script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="lib/angular/js/ng-grid.debug.js"></script>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
 
-<script type="text/javascript" src="static/js/searchPosition.js"></script>
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<script type="text/javascript" src="js/searchPosition.js"></script>
+<link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="static/css/home.css" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
         rel="stylesheet">
-<link href="css/font-awesome.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/pages/dashboard.css" rel="stylesheet">
+<link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
+<link href="static/css/style.css" rel="stylesheet">
+<link href="static/css/dashboard.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
