--- a/src/main/webapp/editCandidate.html
+++ b/src/main/webapp/editCandidate.html
@@ -5,16 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="lib/angular/js/angular.min.js"></script>
-<script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
-<script src="lib/angular/js/ng-grid.debug.js"></script>
+<script src="lib/bootstrap/js/bootstrap.js"></script>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="lib/angular/js/ng-grid-1.3.2.js"></script>
+<script src="lib/angular/js/ng-grid.debug.js"></script>
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
 <script type="text/javascript" src="js/editCandidate.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="static/css/home.css" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
-        rel="stylesheet">
+<link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
 <link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
 <link href="static/css/style.css" rel="stylesheet">
 <link href="static/css/dashboard.css" rel="stylesheet">
