--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -12,7 +12,9 @@
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
 	
 	<link href="css/font-awesome.css" rel="stylesheet">
-	    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600" rel="stylesheet">
+	    <link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
+<script src="lib/bootstrap/js/bootstrap.js"></script>
+
 	    
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 
