--- a/src/main/webapp/createCandidate.html
+++ b/src/main/webapp/createCandidate.html
@@ -17,7 +17,9 @@
 <link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
 <link href="static/css/style.css" rel="stylesheet">
 <link href="static/css/dashboard.css" rel="stylesheet">
+<script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
+
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
