--- a/src/main/webapp/createUser.html
+++ b/src/main/webapp/createUser.html
@@ -12,6 +12,7 @@
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="static/css/home.css" rel="stylesheet">
 <link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
+<script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
 <link href="static/css/style.css" rel="stylesheet">
