--- a/src/main/webapp/hr-header.html
+++ b/src/main/webapp/hr-header.html
@@ -16,7 +16,7 @@
                             class="icon-user"></i> EGrappler.com <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="javascript:;">Profile</a></li>
-              <li><a href="javascript:;">Logout</a></li>
+              <li><a href="logout.html">Logout</a></li>
             </ul>
           </li>
         </ul>
