--- a/src/main/webapp/editCandidate.html
+++ b/src/main/webapp/editCandidate.html
@@ -52,8 +52,8 @@
               	<tr><td>
               	<div class="control-group"
 							ng-class="{ 'has-error' : CreateCandidate.candidateName.$invalid && !CreateCandidate.candidateName.$pristine }">
-							<label class="lbl" for="candidateName">Candidate Name:</label></td><td> <input type="text" style="margin-left:0%;" ng-pattern="/^[a-zA-Z _]*$/"
-								name="candidateName" class="form-control" id="candidateName" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true"
+							<label class="lbl" for="candidateName">Candidate Name:</label></td><td> <input type="text" ng-pattern="/^[a-zA-Z _]*$/"
+								name="candidateName" class="form-control" id="candidatefName" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true"
 								ng-model="candidate.candidateName" placeholder="Enter Candidate Name"
 								required></td></tr><tr><td></td><td> <span
 								ng-show="CreateCandidate.candidateName.$invalid  && !CreateCandidate.candidateName.$pristine"
@@ -191,7 +191,7 @@
 						<tr><td></td>
 						<td>
 						<div class="control-group">
-						<input type="button" class="btn btn-info" ng-click="editCandidate()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px;margin-left:-47%;"/>
+						<input type="button" class="btn btn-info" ng-click="editCandidate()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px;"/>
 						<input type="button" class="btn btn-info" ng-click="updateCandidate()" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true" value=Update name="post" align="center" style="color: 0000FF" />		
 						<input type="button" class="btn btn-info" ng-click="reset()" value=Cancel value=Cancel name="post" align="center" style="color: 0000FF"/>
 						</div></td></tr>
