--- a/src/main/webapp/editPosition.html
+++ b/src/main/webapp/editPosition.html
@@ -130,7 +130,7 @@
 							
 							<tr><td></td><td>
 							<div class="control-group">
-							<input type="button" class="btn btn-info" ng-click="editPosition()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px;margin-left:-47%;"/>
+							<input type="button" class="btn btn-info" ng-click="editPosition()" value=Edit ng-disabled="disableEditButton" ng-init="disableEditButton=false" name="post" align="center" style="color: 0000FF;width: 80px;"/>
 							<input type="button" class="btn btn-info" ng-click="updatePositionDetails()" ng-disabled="enableDisableButton" ng-init="enableDisableButton=true" value=Update name="post" align="center" style="color: 0000FF"/>
 							<input type="button" class="btn btn-info" ng-click="cancel()" value=Cancel name="post" align="center" style="color: 0000FF"/>
 							</div>
