Add ngView to searchPosition View

--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="erApp" ng-controller="searchPositionCtrl">
+<html lang="en" ng-app="erApp" ng-controller="positionCtrl">
 <head>
 <meta charset="utf-8">
 <title>Employee Referral Portal</title>
@@ -70,15 +70,7 @@
             </td>
             </tr>
             </table> -->
-            <div id="gd" class="form-container"><br>
             
-           <form action="#" name="createPosition" onvalidate>
-              	<form id="integerForm" role="form" class="form-horizontal">
-  
-              	<div class="gridStyle" ng-grid="gridOptions"></div>
-            	</form>
-            </form>
-            </div>
             
               	<div ng-view>
               	</div>
