--- a/src/main/webapp/routeCreatePosition.html
+++ b/src/main/webapp/routeCreatePosition.html
@@ -6,7 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="lib/angular/js/angular.min.js"></script>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<script type="text/javascript" src="js/position.js"></script>
+<script type="text/javascript" src="js/createPosition.js"></script>
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
 <script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
