--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -12,7 +12,7 @@
               <li><a href="javascript:;">Help</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
+          <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown"><i
                             class="icon-user"></i> EGrappler.com <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="javascript:;">Profile</a></li>
